NLP TP/texts/robotics/robotics.stackexchange_0000102892.txt
Q:

Building Ros Melodic from source fails at vcs import src < melodic-desktop-full.rosinstall

I decided to build ROS Melodic from source instead and deleted all ROS Melodic packages and installation binaries.
I've been following these steps: wiki.ros.org/melodic/Installation/Source
Unfortunately it fails at vcs import src < melodic-desktop-full.rosinstall with
Traceback (most recent call last):
  File "/usr/local/bin/vcs", line 7, in <module>
    from vcstool.commands.vcs import main
  File "/usr/local/lib/python2.7/dist-packages/vcstool/commands/__init__.py", line 1, in <module>
    from .branch import BranchCommand
  File "/usr/local/lib/python2.7/dist-packages/vcstool/commands/branch.py", line 6, in <module>
    from .command import Command
  File "/usr/local/lib/python2.7/dist-packages/vcstool/commands/command.py", line 6, in <module>
    from vcstool.executor import execute_jobs
  File "/usr/local/lib/python2.7/dist-packages/vcstool/executor.py", line 31
    file=stdout)
        ^
SyntaxError: invalid syntax

What can I do to fix this problem? I found nothing while searching for this.

Originally posted by xdzye on ROS Answers with karma: 15 on 2023-01-06
Post score: 0

A:

In short: you're using Python 2, which the main distribution(s) of vcstool no longer support.
You'll either have to use Python 3 to run vcstool, or switch to the 0.2.x branch.
I'd suggest the former.
Note this is mentioned in the readme of vcstool:

Python 2.7 / <= 3.4 support
The latest version supporting Python 2.7 and Python <= 3.4 is 0.2.x from the 0.2.x branch.

Originally posted by gvdhoorn with karma: 86574 on 2023-01-06
This answer was ACCEPTED on the original site
Post score: 1

Original comments
Comment by xdzye on 2023-01-06:
Ok, thank you very much! I thought melodic is better to run with Python 2.7, or should i rebuild with Python3?
I saw this thread: https://answers.ros.org/question/237613/how-to-define-ros-kinetic-to-use-python3-instead-of-python27/ and also your answer that suggests one can use basic functionality when building with python3, but I need opencv etc. to use rtabmap. Should I just stick to 2.7?
I also found a gist that suggests another installation path for ros melodic with python3: https://gist.github.com/MBaranPeker/3005ed281cf03922d641ba98bf8088eb
I dont really understand the sed commands in the gist so I cant judge if this would build all packages with Python3.
Comment by gvdhoorn on 2023-01-08:
It's perfectly possible to use Python 3 for vcstool while using Python 2 for Melodic.
There is no need to build Melodic from source, nor for Python 3.
Comment by xdzye on 2023-01-18:
Thank you, I got it working.

